tests/rosetta/out/Java/csv-data-manipulation.error
javac error: exit status 1
/tmp/TestMochiToJavacsv-data-manipulation1593760172/001/CsvDataManipulation.java:27: error: not a statement
        0123456789 digits = new 0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
        ^
/tmp/TestMochiToJavacsv-data-manipulation1593760172/001/CsvDataManipulation.java:27: error: ';' expected
        0123456789 digits = new 0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                ^
/tmp/TestMochiToJavacsv-data-manipulation1593760172/001/CsvDataManipulation.java:27: error: <identifier> expected
        0123456789 digits = new 0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                               ^
/tmp/TestMochiToJavacsv-data-manipulation1593760172/001/CsvDataManipulation.java:27: error: '(' or '[' expected
        0123456789 digits = new 0123456789(0, 1, 2, 3, 4, 5, 6, 7, 8, 9);
                                ^
4 errors
